Update header text and version information

--- a/index.html
+++ b/index.html
@@ -628,8 +628,8 @@
             <div class="flex items-center space-x-3">
                 <div class="bg-indigo-700 p-2 rounded-lg"><i data-lucide="cloud" class="h-6 w-6 text-green-400"></i></div>
                 <div>
-                    <h1 class="text-lg font-bold tracking-wide">NPS Cloud 2.3</h1>
-                    <p class="text-xs text-indigo-300 flex items-center gap-1"><span class="w-2 h-2 bg-green-400 rounded-full animate-pulse"></span> Online</p>
+                    <h1 class="text-lg font-bold tracking-wide">Acompanhamento NPS</h1>
+                    <p class="text-xs text-indigo-300 flex items-center gap-1"><span class="w-2 h-2 bg-green-400 rounded-full animate-pulse"></span> Online - v1.0 (BETA)</p>
                 </div>
             </div>
             <div class="flex items-center space-x-3">
